Changed node 8 to node LTS Alpine on Dockerfile Added update and upgrade to Dockerfile First implementation of docker-compose and docker-compose-example Added some more vars to env Removed package-lock.json

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 HOST=localhost
 PORT=3000
 USE_SSL=0
+
+DATAFOLDER=/home/user/somepath
+LOCALDOMAIN=somedomain.tld
+RESTARTPOLICY=on-failure:10
+#DNS_PROVIDER1=1.1.1.1
+#DNS_PROVIDER2=1.0.0.1
