--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3.6"
 services:
   gekko:
     build: ./
@@ -6,12 +6,15 @@ services:
       - ./volumes/gekko/history:/usr/src/app/history
       - ./config.js:/usr/src/app/config.js
     links:
-      - redis
-#      - postgresql
+      - postgresql
     environment:
      - HOST
      - PORT
      - USE_SSL
+     - VIRTUAL_HOST: www.qbittorrent.${LOCALDOMAIN}, qbittorrent.${LOCALDOMAIN} \
+     - LETSENCRYPT_HOST: www.qbittorrent.${LOCALDOMAIN}, qbittorrent.${LOCALDOMAIN} \
+     - LETSENCRYPT_EMAIL: tonibobone@gmail.com \
+      # LETSENCRYPT_TEST: "true"
     ports: # you can comment this out when using the nginx frontend
       - "${PORT}:${PORT}"
 ## optionally set nginx vars if you wish to frontend it with nginx
@@ -20,27 +23,19 @@ services:
 #     - PORT=3000
 #     - DOMAIN=gekko
 
-  redis:
-    image: redis:latest
-    volumes:
-      - ./volumes/redis:/data
-## optionally uncomment if you wish to use nginx as a frontend
-#  nginx:
-#    restart: always
-#    image: jwilder/nginx-proxy
-#    ports:
-#     - "80:80"
-#    volumes:
-#     - /var/run/docker.sock:/tmp/docker.sock:ro
-## optionally uncomment if you wish to use postgresql as a db
-#  postgresql:
-#    restart: always
-#    image: postgres:9.6-alpine
-#    ports:
-#      - 5432:5432
-#    volumes:
-#      - ./_postgresql:/var/lib/postgresql/data:rw
-#    environment:
-#      POSTGRES_DB: gekko
-#      POSTGRES_USER: username
-#      POSTGRES_PASSWORD: password
+postgresql:
+  restart: on-failure:10
+  image: postgres:9.6-alpine
+  ports:
+    - 5432:5432
+  volumes:
+    - ./_postgresql:/var/lib/postgresql/data:rw
+  environment:
+    - POSTGRES_DB: gekko
+    - POSTGRES_USER: username
+    - POSTGRES_PASSWORD: password
+
+networks:
+  default:
+    external:
+      name: webproxy
