--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ USE_SSL=1
 DATAFOLDER=/home/user/somepath
 LOCALDOMAIN=somedomain.tld
 RESTARTPOLICY=on-failure:10
-#DNS_PROVIDER1=1.1.1.1
-#DNS_PROVIDER2=1.0.0.1
+POSTGRES_DB: gekko
+POSTGRES_USER: username
+POSTGRES_PASSWORD: password
