Wrong syntax in env file

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ USE_SSL=1
 DATAFOLDER=/home/user/somepath
 LOCALDOMAIN=somedomain.tld
 RESTARTPOLICY=on-failure:10
-POSTGRES_DB: gekko
-POSTGRES_USER: username
-POSTGRES_PASSWORD: password
+POSTGRES_DB=gekko
+POSTGRES_USER=username
+POSTGRES_PASSWORD=password
